# ostep-projects-rust

./: .gitattributes  .gitpod.Dockerfile  .gitpod.yaml  .gitpod.yml  Cargo.toml  README.md  build.sh
old_src_c/: wcat.c  wgrep.c  wish.c  wunzip.c  wzip.c
src/initial-utilities/wcat/: wcat  wcat.rs
src/initial-utilities/wgrep/: grep  wgrep  wgrep.rs
src/initial-utilities/wunzip/: wunzip  wunzip.rs
src/initial-utilities/wzip/: wzip  wzip.rs
src/processes-shell/: wish  wish.rs
